--- a/Web/Areas/Logistics/Views/LocalPurchase/Details.cshtml
+++ b/Web/Areas/Logistics/Views/LocalPurchase/Details.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Cats.Areas.Logistics.Models
 @using Kendo.Mvc.UI
 @using Cats.Helpers
+@using Cats.Models
+@using Cats.Security
 
 @model Cats.Areas.Logistics.Models.LocalPurchaseWithDetailViewModel
 @{
@@ -48,21 +50,48 @@
                     @*<a href="javascript:;" class="remove" data-original-title="" title=""></a>*@
                 </div>
             <div class="actions">
-                    @if (Model.StatusID == 1)
+                @{
+                    var currentState = Model.BusinessProcess.CurrentState;
+                    var state = currentState != null ? currentState.BaseStateTemplate : null;                   
+                    var isDraft = false;
+                    if (state != null)
                     {
-                        <div class="btn-group">
-                            <button class="btn green dropdown-toggle" data-toggle="dropdown">
+                        isDraft = state.Name == "Draft";
+                    }
+                }
+                @if (Model.StatusID == 1 || isDraft)
+                {                 
+                    <div class="btn-group">
+                        @*<button class="btn green dropdown-toggle" data-toggle="dropdown">
                                 @Html.Translate("Actions")
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu pull-right">
                                 <li><a class="btn green-sharp-stripe" href="@Url.Action("Approve", "LocalPurchase", new {id = Model.LocalPurchaseID})"> @Html.Translate("Approve(Send to Hub)")</a></li>
-                            </ul>
-                        </div>
-                        <a class="btn green btn-xs toolbar-btn " data-buttontype="btn_save" data-submittedform="frm_create_localPurchase"><i class="fa fa-save"></i> @Html.Translate("Save Changes")</a>
-                        <a class="btn red btn-xs toolbar-btn " data-buttontype="btn_cancel" href=""><i class="fa fa-times"></i> @Html.Translate("Cancel Changes")</a>
-                
-                    }
+                            </ul>*@
+                        <button class="btn green dropdown-toggle" data-toggle="dropdown">
+                            @Html.Translate("Actions")
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu pull-right">
+                            @foreach (FlowTemplate actions in state.InitialStateFlowTemplates)
+                            {
+                                //Console.WriteLine(state.Name);
+                                if (actions.Name == "Approve")
+                                {
+                                    <li class="edit_button">
+                                        <a href="javascript:promot_workflow(@Model.BusinessProcessID ,@actions.FinalStateID,'@actions.Name',@Model.LocalPurchaseID)" title="@actions.Name">@actions.Name</a>
+                                    </li>
+                                }
+                            }
+                            <li class="divider"></li>
+                            <li class="edit_button"><a href="javascript:workflow_history(@Model.BusinessProcessID)"> History </a></li>
+                        </ul>
+                    </div>
+                    <a class="btn green btn-xs toolbar-btn " data-buttontype="btn_save" data-submittedform="frm_create_localPurchase"><i class="fa fa-save"></i> @Html.Translate("Save Changes")</a>
+                    <a class="btn red btn-xs toolbar-btn " data-buttontype="btn_cancel" href=""><i class="fa fa-times"></i> @Html.Translate("Cancel Changes")</a>
+
+                }
             </div>
         </div>
         <div class="portlet-body">
@@ -258,6 +287,20 @@
         </div>
     </div>
 }
+<div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 id="modalHistoryLabel">Activity History</h4>
+            </div>
+            <div class="modal-body" id="modalHistoryBody">History</div>
+
+        </div>
+    </div>
+</div>
+@Html.Partial("~/Views/Shared/_PromotWorkflow.cshtml");
+
 <script type="text/javascript">
     function onAdditionalData(e) {
 
@@ -266,9 +309,41 @@
 
         };
     }
+
     function index(dataItem) {
         var data = $("#LocalPurchaseDetail").data("kendoGrid").dataSource.data();
 
         return data.indexOf(dataItem);
     }
+</script>
+
+<script>
+    // Workflow Implementation
+    var history_link = "@Url.Action("History", "BusinessProcess", new { Area = "WorkflowManager", id = "0" })";
+
+    function promot_workflow(BusinessProcessID, nextstate, actionname, PlanID) {
+        //alert(PaymentRequestID);
+        $('#ParentBusinessProcessID').val(BusinessProcessID);
+        $('#stateID').val(nextstate);
+        $('#modalPromotionLabel').html(actionname);
+        $('#TransporterChequeID').val(TransporterChequeID);
+        $('#modalPromotion').modal();
+        $.ajax({
+            type: "POST",
+            url: "@Url.Action("ApproveHRD", "HRD")",
+            data: "{id:" + PlanID + "}",
+        dataType: json
+    });
+    }
+
+    function workflow_history(BusinessProcessID) {
+        $('#modalHistory').modal();
+        $('#modalHistoryBody').html("<div style='text-align:center;'> <img src='/content/images/loading.gif'/></div>");
+        $.post(history_link + BusinessProcessID, {},
+            function(data) {
+                $("#modalHistoryBody").html(data);
+            }
+        );
+    }
+
 </script>
